--- a/net/Sample/bower.json
+++ b/net/Sample/bower.json
@@ -2,6 +2,7 @@
     "name": "Sample",
     "private": true,
     "dependencies": {
-        "devextreme": "17.2.7"
+        "devextreme": "17.2.7",
+        "jquery": "3.1.1"
     }
 }
