--- a/net/NuGet.Config
+++ b/net/NuGet.Config
@@ -5,5 +5,6 @@
   </config>
   <packageSources>
     <add key="api.nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="devexpress" value="https://nuget.devexpress.com/free/api" />
   </packageSources>
 </configuration>
