--- a/net/docfx/filterConfig.yml
+++ b/net/docfx/filterConfig.yml
@@ -2,6 +2,8 @@ apiRules:
 - exclude:
     uidRegex: ^DevExtreme\.AspNet\.Data\.Helpers\.Compat$
 - exclude:
+    uidRegex: ^DevExtreme\.AspNet\.Data\.Helpers\.CustomAccessorCompilers(\.|$)
+- exclude:
     uidRegex: ^DevExtreme\.AspNet\.Data\.DataSourceLoadOptionsBase\.(Pre|Remote)Select$
 - exclude:
     uidRegex: ^System\.Object\.
