--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bluebird": "^3.5.1",
     "eclint": "^2.0.1",
     "jquery": "^3.3.1",
-    "jshint": "^2.9.2",
+    "jshint": "2.9.5",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
