--- a/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.EFCore8/DevExtreme.AspNet.Data.Tests.EFCore8.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.Identity.Client" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="System.Formats.Asn1" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
