--- a/net/DevExtreme.AspNet.Data.Tests.NH/DevExtreme.AspNet.Data.Tests.NH.csproj
+++ b/net/DevExtreme.AspNet.Data.Tests.NH/DevExtreme.AspNet.Data.Tests.NH.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="FluentNHibernate" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="System.Net.Http" />
+    <PackageReference Include="System.Text.RegularExpressions" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
