--- a/net/Sample/Sample.csproj
+++ b/net/Sample/Sample.csproj
@@ -7,10 +7,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DevExtreme.AspNet.Data\DevExtreme.AspNet.Data.csproj" />
-    <PackageReference Include="Microsoft.Web.LibraryManager.Build" />
-    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.Identity.Client" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" />
+    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="System.Formats.Asn1" />
   </ItemGroup>
 
   <Target Name="Clean dx-aspnet-data-js" BeforeTargets="LibraryManagerRestore">
