--- a/.github/actions/dotnet-test-build/action.yml
+++ b/.github/actions/dotnet-test-build/action.yml
@@ -5,6 +5,10 @@ runs:
   using: "composite"
 
   steps:
+  - uses: actions/setup-dotnet@v3
+    with:
+      dotnet-quality: ga
+      dotnet-version: 9.0
 
   - uses: actions/cache@v4
     with:
